# Rubiks-Cube

./: Cargo.toml  LICENSE  README.md
src/: actions.rs  camera.rs  cube.rs  main.rs  settings.rs  solver.rs  ui.rs
src/kewb/src/two_phase/: solver.rs
