[package]
name = "Rubiks-Cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
bevy_mod_picking = "0.20.1"
rand = "*"
bevy_egui = "0.30"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"