[package]
name = "Rubiks-Cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
bevy_mod_picking = "0.20.1"
rand = "*"
bevy_egui = { version = "0.30", default-features = false, features = ["default_fonts", "render"] }
kewb = "0.4.2"
bevy_async_task = "0.2.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"